# um1

./: .cproject  .project  button.patch  partitions.csv  sdkconfig  sdkconfig.old
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
components/um1_auth/: Kconfig
components/um1_config/: CMakeLists.txt  um1_config.c
components/um1_http_server/: CMakeLists.txt  Kconfig.projbuild  um1_http_server.c
components/um1_http_server/include/: um1_http_server.h
components/um1_lan/: CMakeLists.txt  Kconfig.projbuild  ethernet_init.c  start_lan.c  um1_lan.c
components/um1_mqtt/: CMakeLists.txt  um1_mqtt.c
components/um1_sntp/: CMakeLists.txt
components/um1_spiffs/: CMakeLists.txt  um1_spiffs.c
components/um1_uart/: CMakeLists.txt  um1_uart.c
components/um1_wifi/: CMakeLists.txt  start_softap.c  um1_wifi.c
firmware/: .cproject  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/.metadata/: version.ini
firmware/components/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.c
main/: main.c
src/: app.js  common.css  config.json  index.html  login.html  login.js  main.css  main.js  sidebar.html  um1_main.css  um1_main.js
src/about/: about.css  about.html  about.js
src/network/: network.css  network.html  network.js
src/settings/: settings.css  settings.html  settings.js
src/update/: update.css  update.html  update.js
web/src/: app.js  common.css  config.json  index.html  login.html  login.js  main.css  main.js  sidebar.html  style.css
(+70 files in other folders)
